--- a/admin-node/package.json
+++ b/admin-node/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "boom": "^7.3.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   }
 }
