--- a/admin-node/package.json
+++ b/admin-node/package.json
@@ -12,6 +12,7 @@
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mysql": "^2.18.1"
   }
 }
