--- a/admin-node/package.json
+++ b/admin-node/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.14",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -16,6 +17,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23"
   }
 }
